Decorated portfolio page

--- a/index.html
+++ b/index.html
@@ -2,30 +2,28 @@
 <html lang="ru">
 	<head>
 		<title>Web-портфолио - Дерябин Андрей</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<div class="content">
 			<div class="content-inner">
 				<h1>Проектирование и анализ языков веб-решений</h1>
-				<div>
+				<div class="task">
 					<h2>Задание 1.1.</h2>
 					<a href="http://kodaktor.ru/sigma.pdf">Задание</a>
-					<a href="#">Исходный код</a>
+					<a href="https://github.com/a-deriabin/web-portfolio/tree/main/web-langs/task1">Исходный код</a>
 					<a href="web-langs/task1/subtask1.xml">Посмотреть на сайте</a>
 				</div>
-				<div>
+				<div class="task">
 					<h2>Задание 1.2.</h2>
 					<a href="http://kodaktor.ru/svg.pdf">Задание</a>
-					<a href="#">Исходный код</a>
+					<a href="https://github.com/a-deriabin/web-portfolio/tree/main/web-langs/task1">Исходный код</a>
 					<a href="web-langs/task1/subtask2.xml">Посмотреть на сайте</a>
-				</div>
-				<div>
-					TODO: оформить страницу
 				</div>
 			</div>
 		</div>
 		<div class="footer">
-			(c) Дерябин Андрей
+			(c) Дерябин Андрей P41081
 		</div>
 	</body>
 </html>
