--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</div>
 		</div>
 		<div class="footer">
-			(c) Дерябин Андрей P41081
+			<h4 id="author" title="GossJS">(c) Дерябин Андрей P41081</h4>
 		</div>
 	</body>
 </html>
