Added coursework file and some text styling

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 					<a href="https://github.com/a-deriabin/web-portfolio/tree/main/web-langs/task1">Исходный код</a>
 					<a href="web-langs/task1/subtask2.xml">Посмотреть на сайте</a>
 				</div>
+				<div class="task">
+					<h2>Курсовая работа</h2>
+					<a href="web-langs/coursework/P41081_Deriabin.docx">.docx</a>
+				</div>
 			</div>
 		</div>
 		<div class="footer">
